--- a/static/index-register-form.html
+++ b/static/index-register-form.html
@@ -21,7 +21,7 @@
                     <form action="register" method="post" role="form" class="register-form" id="register-form">
                         <div class="row">
                             <div class="col-md-6 form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Имя пользователя" required pattern="[a-zA-Z0-9]+" minlength="4" maxlength="20">
+                                <input type="text" class="form-control" autocomplete="username" name="name" id="name" placeholder="Имя пользователя" required pattern="[a-zA-Z0-9]+" minlength="4" maxlength="20">
                             </div>
                             <div class="col-md-6 form-group mt-3 mt-md-0">
                                 <label class="fieldInfo">Может состоять из латинских букв и цифр, от 4 до 20 символов</label>
@@ -29,7 +29,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6 form-group">
-                                <input type="password" class="form-control" name="password" id="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" minlength="8" maxlength="20" placeholder="Пароль" required>
+                                <input type="password" class="form-control" autocomplete="new-password" name="password" id="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" minlength="8" maxlength="20" placeholder="Пароль" required>
                             </div>
                             <div class="col-md-6 form-group mt-3 mt-md-0">
                                 <label class="fieldInfo">Может состоять из латинских букв, цифр и символов: @ $ ! % * ? &
@@ -38,7 +38,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6 form-group">
-                                <input type="password" class="form-control" name="confirm-password" id="confirm-password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" minlength="8" maxlength="20" placeholder="Подтверждение пароля" required>
+                                <input type="password" class="form-control" autocomplete="new-password" name="confirm-password" id="confirm-password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" minlength="8" maxlength="20" placeholder="Подтверждение пароля" required>
                             </div>
                         </div>
                         <div class="my-3">
