modules open complete

--- a/static/index-register-form.html
+++ b/static/index-register-form.html
@@ -21,7 +21,7 @@
                     <form action="register" method="post" role="form" class="register-form" id="register-form">
                         <div class="row">
                             <div class="col-md-6 form-group">
-                                <input type="text" class="form-control" autocomplete="username" name="name" id="name" placeholder="Имя пользователя" required pattern="[a-zA-Z0-9]+" minlength="4" maxlength="20">
+                                <input type="text" class="form-control" autocomplete="username" name="username" id="name" placeholder="Имя пользователя" required pattern="[a-zA-Z0-9]+" minlength="4" maxlength="20">
                             </div>
                             <div class="col-md-6 form-group mt-3 mt-md-0">
                                 <label class="fieldInfo">Может состоять из латинских букв и цифр, от 4 до 20 символов</label>
