--- a/static/base-small-head.html
+++ b/static/base-small-head.html
@@ -2,8 +2,8 @@
 
 <section id="hero-static" class="hero-static d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-        <h2>Добро пожаловать, {{ .Username }}</h2>
-        <p>Немного статистики</p>
+        <h2>Добро пожаловать, {{ .User.Username }}</h2>
+        <p>Открыто модулей: {{ .ModulesOpened}} / {{ .ModulesTotal }}<br>Завершено: {{ .ModulesCompleted}}</p>
     </div>
 </section>
 
