--- a/static/modules/module-06/part-01/data.html
+++ b/static/modules/module-06/part-01/data.html
@@ -1,5 +1,7 @@
 <h1>Привет!</h1>
 <p>Это тестовая часть</p>
 <p>Тут просто должен быть текст</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/DJJEr6IaW1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/DJJEr6IaW1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 <p>Удачи!</p>
