--- a/static/module.html
+++ b/static/module.html
@@ -47,22 +47,23 @@
                             {{ range $c := $p.Comments }}
                             <div id="{{ $c.Id }}" class="card border-0 mb-3">
                                 <div class="card-header bg-transparent">
-                                    <label class="text-muted fs-6">Последнее обновление: {{ $c.ModifiedAt }}</label>
-                                    <button id="delete-comment_{{ $c.Id }}" class="btn-delete-comment badge badge-danger bg-danger float-sm-end">Удалить</button>
-                                    <button id="update-comment_{{ $c.Id }}" class="btn-update-comment badge badge-primary bg-primary float-sm-end" onclick="makeCommentEditable('{{$c.Id}}')">Изменить</button>
+                                    <label class="text-muted fs-6">Последнее обновление: </label>
+                                    <label id="last-update-time_{{ $c.Id }}" class="text-muted fs-6 ms-1">{{ $c.ModifiedAt }}</label>
+                                    <button id="delete-comment_{{ $c.Id }}" class="btn-delete-comment badge badge-danger bg-danger ms-2 float-sm-end">Удалить</button>
+                                    <button id="update-comment_{{ $c.Id }}" class="btn-update-comment badge badge-primary bg-primary ms-2 float-sm-end" onclick="makeCommentEditable('{{$c.Id}}')">Изменить</button>
                                 </div>
-                                <div id="text-{{ $c.Id }}" class="card card-body bg-light">{{ $c.Text }}</div>
-                                <p></p>
+                                <div id="text-{{ $c.Id }}" class="multiline-card card card-body bg-light">{{ $c.Text }}</div>
                             </div>
                             {{ end }}
                         </div>
+                        <p></p>
                         <div class="collapse" id="addCommentToPart{{ $p.Id}}">
                             <form action="comment" method="post" role="form" class="new-comment-form" id="new-comment-form-for-{{ $p.Id}}">
                                 <div class="mb-3">
                                     <input type="hidden" name="part_id" value="{{ $p.Id}}">
                                     <input type="hidden" name="module_id" value="{{ $p.ModuleId}}">
                                     <label for="textForNewComment{{ $p.Id}}" class="form-label">Комментарий</label>
-                                    <textarea class="form-control" aria-label="text" name="text" id="textForNewComment{{ $p.Id}}" maxlength="1000"></textarea>
+                                    <textarea class="form-control" aria-label="text" name="text" id="textForNewComment{{ $p.Id}}" maxlength="10000" placeholder="Максимум 10000 символов"></textarea>
                                 </div>
                                 <button type="submit" id="submit-{{ $p.Id}}" class="btn btn-success btn-submit-comment" data-bs-toggle="collapse" data-bs-target="#addCommentToPart{{ $p.Id}}" aria-expanded="false" aria-controls="addCommentToPart{{ $p.Id}}">Отправить</button>
                             </form>
