--- a/static/index-register-form.html
+++ b/static/index-register-form.html
@@ -1,5 +1,7 @@
 {{ define "RegisterForm" }}
 
+<script src="assets/js/register.js"></script>
+
 <!-- ======= Register Section ======= -->
 <section id="register" class="contact">
 
