--- a/static/login-form.html
+++ b/static/login-form.html
@@ -1,5 +1,7 @@
 {{ define "LoginForm" }}
 
+<script src="assets/js/login.js"></script>
+
 <!-- ======= Login Section ======= -->
 <section id="register" class="contact">
 
