--- a/static/learn.html
+++ b/static/learn.html
@@ -8,7 +8,7 @@
     {{ template "NavbarContent" . }}
 
     <main id="main">
-        {{ template "SmallHead" . }}
+        {{ template "LearnSmallHead" . }}
 
         <!-- ======= Recent Blog Posts Section ======= -->
         <section id="modules" class="contact">
