--- a/static/index-register-form.html
+++ b/static/index-register-form.html
@@ -45,7 +45,7 @@
                         <div class="my-3">
                             <div class="loading">Загрузка...</div>
                             <div id="register-fail" class="error-message"></div>
-                            <div id="register-ok" class="sent-message">Готово, можно войти в <a class="lk-link" href="/lk">Личный кабинет</a></div>
+                            <div id="register-ok" class="sent-message">Готово, можно <a class="learn-link" href="/learn">Перейти к модулям</a></div>
                         </div>
                         <div class="text-right"><button type="submit">Регистрация</button></div>
                     </form>
