--- a/static/testing.html
+++ b/static/testing.html
@@ -7,7 +7,7 @@
 
     {{ template "TestingNavbarContent" . }} {{ template "TestingFullScreenHead" . }}
 
-    <main id="testing" class="d-none">
+    <main id="testing" class="d-none" data-aos="fade-up">
         <section>
             <div id="testing-carousel" class="carousel carousel-dark slide" data-bs-interval="false">
                 <div id="slides-indicators" class="carousel-indicators">
