progress as separated entity

--- a/static/index-register-form.html
+++ b/static/index-register-form.html
@@ -47,7 +47,7 @@
                             <div id="register-fail" class="error-message"></div>
                             <div id="register-ok" class="sent-message">Готово, можно <a class="learn-link" href="/learn">Перейти к модулям</a></div>
                         </div>
-                        <div class="text-right"><button type="submit">Регистрация</button></div>
+                        <div class="text-right"><button type="submit" id="register-submit-btn">Регистрация</button></div>
                     </form>
                     <!-- End Info Item -->
                 </div>
