--- a/static/learn-small-head.html
+++ b/static/learn-small-head.html
@@ -3,7 +3,11 @@
 <section id="hero-static" class="hero-static d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
         <h2>Добро пожаловать, {{ .User.Username }}</h2>
-        <p>Открыто модулей: {{ .ModulesOpened}} / {{ .ModulesTotal }}<br>Завершено: {{ .ModulesCompleted}}</p>
+        <p>
+            Текущий курс: {{ .User.CurrentCourse }}
+            <br> Открыто модулей: {{ .User.ModulesOpen}} / {{ .User.ModulesTotal }}
+            <br> Завершено: {{ .User.ModulesCompleted}}
+        </p>
     </div>
 </section>
 
