--- a/static/account.html
+++ b/static/account.html
@@ -14,62 +14,28 @@
             <div class="container" data-aos="fade-up">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="pills-active-tests-tab" data-bs-toggle="pill" data-bs-target="#pills-active-tests" type="button" role="tab" aria-controls="pills-active-tests" aria-selected="true">Активные тесты</button>
+                        <button class="nav-link active" id="pills-activetests-tab" data-bs-toggle="pill" data-bs-target="#pills-activetests" type="button" role="tab" aria-controls="pills-activetests" aria-selected="true">Активные тесты</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Курсы</button>
+                        <button class="nav-link" id="pills-courses-tab" data-bs-toggle="pill" data-bs-target="#pills-courses" type="button" role="tab" aria-controls="pills-courses" aria-selected="false">Курсы</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Настройки</button>
+                        <button class="nav-link" id="pills-usersettings-tab" data-bs-toggle="pill" data-bs-target="#pills-usersettings" type="button" role="tab" aria-controls="pills-usersettings" aria-selected="false">Настройки</button>
                     </li>
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-active-tests" role="tabpanel" aria-labelledby="pills-active-tests-tab">
-                        {{ if .Tests }}
-                        <h3>Активные тесты:</h3>
-                        <ul>
-                            {{ range $test := .Tests }}
-                            <li>
-                                <a class="btn-light" href="/testing?test_id={{$test.Id}}&module_id={{$test.ModuleId}}"><i class="bi-arrow-right-circle-fill"></i> Тест от {{ $test.CreatedAt }} по {{ if eq $test.ModuleId 0 }}всем модулям {{else}}модулю #{{$test.ModuleId}}{{end}}</a>
-                            </li>
-                            {{ end }}
-                        </ul>
-                        {{ else }}
-                        <h3 class="pb-5">У вас нет активных тестов</h3>
-                        {{ end }}
+                    <div class="tab-pane fade show active" id="pills-activetests" role="tabpanel" aria-labelledby="pills-activetests-tab">
+                        {{ template "AccountActiveTests" . }}
                     </div>
-                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                        <h3>Reprehit</h3>
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                            id est laborum
-                        </p>
-                        <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                        </ul>
+                    <div class="tab-pane fade" id="pills-courses" role="tabpanel" aria-labelledby="pills-courses-tab">
+                        {{ template "AccountCourses" . }}
                     </div>
-                    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-                        <h3>Reprehit</h3>
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                            id est laborum
-                        </p>
-                        <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                        </ul>
+                    <div class="tab-pane fade" id="pills-usersettings" role="tabpanel" aria-labelledby="pills-usersettings-tab">
+                        {{ template "AccountUserSettings" . }}
                     </div>
                 </div>
             </div>
+            <script src="assets/js/changepassword.js"></script>
         </section>
 
     </main>
